# OpenCV_Exer

./: CMakeLists.txt  ColorImage.cpp  Noise.py  README.md  TemplateMatching.py  Threshold.py
Class Exercise/: TemplateMatching.py
Exercise#2 Images/: ColorImage.py
